k8s/real-world-ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name:  real-world-service
  namespace: real-world
  labels:
    name: real-world
spec:
  selector:
    k8s-app: real-world
  ports:
  - name:  http
    port:  4000
    targetPort:  4000
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
      kubernetes.io/ingress.class: traefik
  name: real-world-service
  namespace: real-world
spec:
  rules:
  - host: real-world.app.local
    http:
      paths:
      - path: /
        backend:
          serviceName: real-world-service
          servicePort: http
